<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FitnessGym</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo" translatable="false">logo</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birthdate">Birthdate</string>
    <string name="birthdate_picker_btn_description">calendar icon</string>
    <string name="phone_number">Phone Number</string>
    <string name="dni" translatable="false">DNI</string>
    <string name="profile_pick">profilePick</string>
    <string name="register_text">Register a New Employee</string>
    <string name="edit_photo_icon">editPhotoIcon</string>
    <string name="cancel">Cancel</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="scroll_down">Scroll Down to see the full form</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="select_image">Select Image</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="enable_permission">You need to enable de permission</string>
    <string name="password_exception_1">The password has to be at least 6 characters long</string>
    <string name="password_exception_2">The passwords don`t match</string>
    <string name="fields_exception">Some fields are empty</string>
    <string name="login_exception">Email or password is wrong</string>
    <string name="home">Home</string>
    <string name="groups">Groups</string>
    <string name="customers">Customers</string>
    <string name="instructors">Instructors</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome to</string>
    <string name="log_out">Log out</string>
    <string name="instructor_profile_pick">instructor profile pick</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="logo_on_side_menu">Logo on side menu</string>
    <string name="app_logo">app logo</string>
    <string name="customer_icon">Customer icon</string>
    <string name="close_application">Close Application</string>
    <string name="close_application_message">Are you sure you want to close the app ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="user_s_profile_pick">User\'s Profile Pick</string>
    <string name="name_hint">First_Name Last_Name</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_user_button">Edit User Button</string>
    <string name="delete_user_message">Are you sure you want to delete your user ? (This action can not be undone)</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_num">Phone Num</string>
    <string name="edit_user">Edit User</string>
    <string name="user_successfully_edited">User successfully edited</string>
    <string name="user_successfully_deleted">User successfully deleted</string>
    <string name="settings">Settings</string>
    <string name="inscription_date">Inscription Date: %1$s</string>
    <string name="customer_profile_pick">Customer Profile Pick</string>
    <string name="group_name">Group Name</string>
    <string name="instructor">Instructor: %1$s</string>
    <string name="fab_content_desc" translatable="false">FAB button</string>
    <string name="postal_code">Postal Code</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_successfully_added">Customer Successfully Added</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="add_customer_to_group">Add Customer to a Group</string>
    <string name="customer_in_group">Customer is already in a group</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="view_customer">View Customer</string>
    <string name="delete_customer_message">Are you sure you want to delete this customer ? (This action can not be undone)</string>
    <string name="customer_successfully_edited">Customer Successfully Edited</string>
    <string name="back">Back</string>
    <string name="group">Group</string>
    <string name="change_customer">Change Customer</string>
    <string name="change_group">Change Group</string>
    <string name="add_group">Add Group</string>
    <string name="add_to_group">Add to Group</string>
    <string name="edit_customer_button">Edit Customer Button</string>
    <string name="quit_from_group_button">Quit From Group Button</string>
    <string name="customer_successfully_deleted">Customer Successfully Deleted</string>
    <string name="delete_from_group">Delete From Group</string>
    <string name="description">Description</string>
    <string name="select_instructor">Select Instructor</string>
    <string name="error_adding_id">Error adding ID</string>
    <string name="error_obtaining_photo_url">Error obtaining photo url</string>
    <string name="error_uploading_photo">Error Uploading Photo</string>
    <string name="quit_photo">Quit Photo</string>
    <string name="customer_removed">%1$s is no longer in the group</string>
    <string name="customer_in_a_group">User is now in %1$s</string>
    <string name="token_error">Error add obtaining authentication token</string>
    <string name="error">Something Went Wrong</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="save">Save</string>
    <string name="group_added_successfully">Group Added Successfully</string>
    <string name="actual_language">Language has been set to %1$s</string>
    <string name="view_instructor">View Instructor</string>
    <string name="view_group">View Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="delete_group_message">Are you sure you want to delete this group ? (This action can not be undone)</string>
    <string name="group_successfully_deleted">Group Successfully Deleted</string>
    <string name="delete_button">Delete Button</string>
    <string name="group_customers">Group Customers</string>
    <string name="operation_completed">Operation Completed</string>
    <string name="soon">Soon</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>German</item>
        <item>Portuguese</item>
    </string-array>
    <string-array name="languages_code" translatable="false">
        <item>en</item>
        <item>es</item>
        <item>de</item>
        <item>pt</item>
    </string-array>
</resources>