<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        />

    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/ic_baseline_groups_24"
        android:title="@string/groups"
        />

    <item
        android:id="@+id/nav_customers"
        android:icon="@drawable/weight_lifter"
        android:title="@string/customers"
        />

    <item
        android:id="@+id/nav_instructors"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/instructors"
        />

</menu>