<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="378dp"
        android:layout_height="213dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/profile_pick"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/customer_profile_pick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fitness_gym_logo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="182dp"
            android:layout_height="39dp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="34dp"
            android:text="@string/name"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_pick"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/email"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="34dp"
            android:text="@string/email"
            android:textSize="10sp" />


        <TextView
            android:id="@+id/inscription_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="180dp"
            android:text="@string/inscription_date_title" />


        <TextView
            android:id="@+id/inscription_date"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="180dp"
            android:text="@string/inscription_date" />


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>